refactor: refactor data type for questionaire file api endpoint and implement the process to convert it to new data type